spade-tests/src/snapshots/spade_tests__ast_lowering__wire_targets_must_be_types.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(x: &2) {}


error: Wire inner types must be types, not type level integers
  ┌─ testinput:1:13
  │
1 │ fn test(x: &2) {}
  │             ^ Wires cannot contain non-types
